@@ -1,3 +1,8 @@
+2007-02-04  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* kern/timer.h: Add some comments from...
+	* i386/i386/timer.h: ... here and remove this file.
+
 2007-01-26  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* doc/mach.texi: Fix the last change.
